tests/sources/invalid/functions/reserved_name_typeof_arg_count.fire
// Semantic error: the type checker hardcodes a single-argument arity check
// for a function literally named 'typeof' (a legacy builtin-name check that
// still applies to any user-defined function reusing that name, since
// 'typeof' is not a reserved keyword in firescript).

fn typeof(a: int32, b: int32) -> int32 {
    return a;
}

fn reserved_name_typeof_arg_count() -> void {
    x: int32 = typeof(1, 2);  //~ ERROR FS-SEM-0010 @16
}
